--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,14 @@
-# Backend Dependencies
-fastapi>=0.104.0
-uvicorn>=0.24.0
-pydantic>=2.5.0
-youtube-transcript-api>=0.6.1
-httpx>=0.25.0
+# Backend Dependencies (pinned versions for security)
+fastapi==0.109.0
+uvicorn==0.27.0
+pydantic==2.5.3
+youtube-transcript-api==0.6.2
+httpx==0.26.0
 
 # Optional: AI Analysis (uncomment if using)
-# openai>=1.3.0
-# anthropic>=0.7.0
+# openai==1.12.0
+# anthropic==0.18.0
 
 # Optional: Database (for production)
-# sqlalchemy>=2.0.0
-# aiosqlite>=0.19.0
+# sqlalchemy==2.0.25
+# aiosqlite==0.19.0
